sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/Windrow_Batch_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Windrow Batch Items added to the windrow</description>
    <label>Windrow Batch Line Item</label>
    <nameField>
        <label>Windrow Batch Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Batch Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>