sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/fields/Item_Source__c.field-meta.xml
<CustomField>
    <fullName>Item_Source__c</fullName>
    <description>Windrow Batch Item Source</description>
    <inlineHelpText>Windrow Batch Item Source</inlineHelpText>
    <label>Item Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corn Cobs</fullName>
            </value>
            <value>
                <fullName>Dont Waste - Garden City</fullName>
            </value>
            <value>
                <fullName>EPZ</fullName>
            </value>
            <value>
                <fullName>FLI Waste</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Mavoko Market</fullName>
            </value>
            <value>
                <fullName>Muthurwa Market</fullName>
            </value>
            <value>
                <fullName>Nairobi Dam</fullName>
            </value>
            <value>
                <fullName>Sanergy Office</fullName>
            </value>
            <value>
                <fullName>SawDust</fullName>
            </value>
            <value>
                <fullName>Steers</fullName>
            </value>
            <value>
                <fullName>Wood Chips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>