sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Item Type to be added to Windrow Batch</description>
    <inlineHelpText>Item Type to be added to Windrow Batch</inlineHelpText>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLI Waste</fullName>
            </value>
            <value>
                <fullName>Non FLI Waste</fullName>
            </value>
            <value>
                <fullName>Bulker</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>