sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/fields/Quantity_Added_Kg__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Added_Kg__c</fullName>
    <description>Total Quantity Added in Kg</description>
    <inlineHelpText>Total Quantity Added in Kg</inlineHelpText>
    <label>Quantity Added(Kg)</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>