sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/fields/Recipe_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Item_Name__c</fullName>
    <label>Recipe Item Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>