sfSandBoxCode/force-app/main/default/objects/Windrow_Batch_Line_Item__c/fields/Windrow_Batch__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Batch__c</fullName>
    <description>Windrow Batch</description>
    <inlineHelpText>Windrow Batch</inlineHelpText>
    <label>Windrow Batch</label>
    <referenceTo>Windrow_Batch__c</referenceTo>
    <relationshipLabel>Windrow Batch Line Items</relationshipLabel>
    <relationshipName>Windrow_Batch_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>